# segmentim

./: SemiSupervisedLearn.ipynb  Show train images .ipynb  Untitled.ipynb  dataset.py  load-model.ipynb  pyproject.toml  utils.py
